tests/conformance/typecheck/valid/unit_literal_match.ks
val u = ()
val result = match (u) {
  () => 1
}
