tests/conformance/typecheck/invalid/tuple_pattern_non_tuple_scrutinee.ks
// EXPECT: Expected tuple type
val n = 1
val r = match (n) { (a, b) => a }
